# greedypet

./: LICENSE  README.md  bot_config.py  bot_config.yaml  data_reader.py  data_storage.py  deal_entry_tracker.py  deal_tracker.py  entities.py  exceptions.py  exchange_data_reader.py  gp_config.py  gp_config.yaml  main.py  market_data_analyzer.py  market_data_collector.py  market_execution.py  requirements.txt  tracking_signal.py  trades_storage.py  utils.py
caterpillar/: Dockerfile  README.md  caterpillar.sh  pyproject.toml  requirements.txt
caterpillar/caterpillar/: app_config.py  config.yaml  data_collector.py  entities.py  exeptions.py  logging.yaml  main.py
caterpillar/caterpillar/dal/: db_client.py
caterpillar/caterpillar/dal/models/: base_model.py  currency_pair.py  olhcv_data.py  trade.py
caterpillar/caterpillar/dal/repositories/: base_repo.py  base_view.py  currency_pair_repo.py  ohlcv_view.py  trade_repo.py
caterpillar/db/: init_db_scheme.sql
caterpillar/tests/integration/dal/: conftest.py  test_db_client.py
caterpillar/tests/integration/dal/repositories/: conftest.py  test_currency_pair_repo.py  test_ohlcv_view.py  test_trade_repo.py
common/: pyproject.toml
common/src/common/db/: config.py
common/src/common/exchange/: data_reader.py  entities.py
common/tests/: test_config.py
common/tests/exchange/: test_data_reader.py
common/tests/utils/: test_converters.py
deal/: deal.py  deal_filter.py  deal_filter_condition.py  entities.py
docs/: Greedypet.drawio
filters/: base_filter.py  bollinger_bends_filter.py  filter_factory.py  (+1 more)
(+56 files in other folders)
