[project]
name = "caterpillar"
version = "0.1.0"
description = ""
authors = [
    {name = "Dzianis Andreyeu",email = "andninbox@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

#[tool.pytest.ini_options]
#pythonpath = [
#  "caterpillar"
#]

#[build-system]
#requires = ["poetry-core>=2.0.0,<3.0.0"]
#build-backend = "poetry.core.masonry.api"
